--- a/Frontend/Emoticoach/tsconfig.spec.json
+++ b/Frontend/Emoticoach/tsconfig.spec.json
@@ -4,12 +4,14 @@
   "compilerOptions": {
     "outDir": "./out-tsc/spec",
     "types": [
-      "jasmine"
+      "jasmine",
+      "node"
     ]
   },
   "files": [
     "src/test.ts",
-    "src/polyfills.ts"
+    "src/polyfills.ts",
+    "src/zone-flags.ts"
   ],
   "include": [
     "src/**/*.spec.ts",
