--- a/Frontend/Emoticoach/package.json
+++ b/Frontend/Emoticoach/package.json
@@ -24,10 +24,11 @@
     "@capacitor/haptics": "4.1.0",
     "@capacitor/keyboard": "4.1.0",
     "@capacitor/status-bar": "4.1.1",
-    "@ionic/angular": "^6.1.9",
+    "@ionic/angular": "^6.5.6",
     "color-convert": "^2.0.1",
     "ionicons": "^6.0.3",
     "rxjs": "~7.5.0",
+    "swiper": "^8.4.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
