47 feature signup and login http request (#49)
* Home page modularization using for loop

* Added routing

* Added new sliding feature on homepage to display PR's. Added HTML/CSS files for login and register. Still need to add API calls from backend.

* Added new sliding feature on homepage to display PR's. Added HTML/CSS files for login and register. Still need to add API calls from backend.

---------

Co-authored-by: Justin Fan <justinfan@Justins-MacBook-Pro.local>
Co-authored-by: Justin Fan <justinfan@Justins-MBP.lan>

--- a/Frontend/Emoticoach/tsconfig.json
+++ b/Frontend/Emoticoach/tsconfig.json
@@ -2,6 +2,7 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "strictPropertyInitialization": false,
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
     "baseUrl": "./",
