--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,15 @@
 asgiref==3.5.2
+asttokens==2.2.1
+colorama==0.4.6
 Django==4.1.6
+django-cors-headers==3.13.0
 djangorestframework==3.14.0
+executing==1.2.0
 gunicorn==20.1.0
+icecream==2.1.3
 psycopg2-binary==2.9.5
+Pygments==2.13.0
 python-dotenv==0.21.0
 pytz==2022.6
+six==1.16.0
 sqlparse==0.4.3
