--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,12 +1,13 @@
 asgiref==3.5.2
 asttokens==2.2.1
 colorama==0.4.6
-Django==4.1.6
+Django==4.1.3
 django-cors-headers==3.13.0
 djangorestframework==3.14.0
 executing==1.2.0
 gunicorn==20.1.0
 icecream==2.1.3
+paho-mqtt==1.6.1
 psycopg2-binary==2.9.5
 Pygments==2.13.0
 python-dotenv==0.21.0
