Imported echarts module

--- a/Frontend/Emoticoach/package.json
+++ b/Frontend/Emoticoach/package.json
@@ -26,7 +26,9 @@
     "@capacitor/status-bar": "4.1.1",
     "@ionic/angular": "^6.5.6",
     "color-convert": "^2.0.1",
+    "echarts": "^5.4.1",
     "ionicons": "^6.0.3",
+    "ngx-echarts": "^15.0.1",
     "rxjs": "~7.5.0",
     "swiper": "^8.4.7",
     "tslib": "^2.3.0",
