--- a/Frontend/Emoticoach/package.json
+++ b/Frontend/Emoticoach/package.json
@@ -51,6 +51,7 @@
     "@typescript-eslint/eslint-plugin": "5.3.0",
     "@typescript-eslint/parser": "5.3.0",
     "chart.js": "^4.2.1",
+    "cypress": "^12.7.0",
     "eslint": "^7.6.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsdoc": "30.7.6",
