--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,6 +8,7 @@ executing==1.2.0
 gunicorn==20.1.0
 icecream==2.1.3
 paho-mqtt==1.6.1
+parameterized==0.8.1
 psycopg2-binary==2.9.5
 Pygments==2.13.0
 python-dotenv==0.21.0
