--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -16,6 +16,7 @@ matplotlib==3.7.0
 numpy==1.24.2
 packaging==23.0
 paho-mqtt==1.6.1
+parameterized==0.8.1
 Pillow==9.4.0
 psycopg2-binary==2.9.5
 Pygments==2.13.0
