get sessions unit test is done
Signed-off-by: csherf <chadnsherf@gmail.com>

--- a/Frontend/Emoticoach/tsconfig.spec.json
+++ b/Frontend/Emoticoach/tsconfig.spec.json
@@ -1,6 +1,7 @@
 /* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
   "extends": "./tsconfig.json",
+  
   "compilerOptions": {
     "outDir": "./out-tsc/spec",
     "types": [
@@ -15,6 +16,7 @@
   ],
   "include": [
     "src/**/*.spec.ts",
-    "src/**/*.d.ts"
+    "src/**/*.d.ts",
+
   ]
 }
