Updated template environment file

--- a/backend/deployment/.env.template
+++ b/backend/deployment/.env.template
@@ -3,7 +3,7 @@ SECRET_KEY=
 DEBUG=1
 DJANGO_ALLOWED_HOSTS=
 
-# Postgres
+# Database Connection
 DATABASE_TYPE=postgres
 SQL_ENGINE=django.db.backends.postgresql
 SQL_DATABASE=
