--- a/backend/deployment/docker-compose.dev.yml
+++ b/backend/deployment/docker-compose.dev.yml
@@ -2,15 +2,12 @@ version: "3.8"
 services:
   django:
     build:
-      context: ../
-      dockerfile: Dockerfile.dev
-    command: python ../manage.py runserver 0.0.0.0:1616
+      context: https://github.com/kobemaristela/EmotiCoach.git#:/backend/deployment
+    command: python manage.py runserver 0.0.0.0:1616
     ports:
       - 1616:1616
-    volumes:
-      - .:/usr/src/app  
     env_file:
-      - ./.env.dev
+      - .env.dev
     depends_on:
       - db
 
@@ -19,7 +16,7 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     env_file:
-      - ./.env.dev.db
+      - .env.db.dev
 
 volumes:
   postgres_data:
