--- a/backend/deployment/docker-compose.prod.yml
+++ b/backend/deployment/docker-compose.prod.yml
@@ -2,8 +2,7 @@ version: "3.8"
 services:
   django:
     build:
-      context: ../
-      dockerfile: Dockerfile.prod
+      context: https://github.com/kobemaristela/EmotiCoach.git#:/backend/deployment
     command: gunicorn emoticoach.wsgi:application --bind  0.0.0.0:1616
     ports:
       - 1616:1616
@@ -17,7 +16,7 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     env_file:
-      - ./.env.prod.db
+      - ./.env.db.prod
 
 volumes:
   postgres_data:
