Updated db variables

--- a/backend/deployment/.env.template
+++ b/backend/deployment/.env.template
@@ -4,7 +4,7 @@ DEBUG=1
 DJANGO_ALLOWED_HOSTS=
 
 # Database Connection
-DATABASE_TYPE=postgres
+SQL_TYPE=postgres
 SQL_ENGINE=django.db.backends.postgresql
 SQL_DATABASE=
 SQL_USER=
