--- a/backend/deployment/docker-compose.prod.yml
+++ b/backend/deployment/docker-compose.prod.yml
@@ -7,7 +7,7 @@ services:
     ports:
       - 1616:1616
     env_file:
-      - ./.env.prod
+      - .env.prod
     depends_on:
       - db
 
@@ -16,7 +16,7 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     env_file:
-      - ./.env.db.prod
+      - .env.db.prod
 
 volumes:
   postgres_data:
