Move to dev branch

--- a/backend/deployment/docker/Dockerfile
+++ b/backend/deployment/docker/Dockerfile
@@ -19,7 +19,8 @@ RUN groupadd -r emoticoach && useradd -r -g emoticoach emoticoach
 
 # Clone GitHub repo
 RUN apt update && apt install git netcat -y
-RUN git clone https://github.com/kobemaristela/EmotiCoach.git
+# RUN git clone https://github.com/kobemaristela/EmotiCoach.git
+RUN git clone -b 137-hotfix-permission-and-syntax-fix https://github.com/kobemaristela/EmotiCoach.git
 
 # Update working directory
 ENV EMOTICOACH_SERVER=/home/emoticoach/EmotiCoach/backend
