--- a/Frontend/Emoticoach/package.json
+++ b/Frontend/Emoticoach/package.json
@@ -24,6 +24,7 @@
     "@capacitor/core": "4.6.1",
     "@capacitor/google-maps": "^4.5.0",
     "@capacitor/haptics": "4.1.0",
+    "@capacitor/ios": "4.6.1",
     "@capacitor/keyboard": "4.1.0",
     "@capacitor/status-bar": "4.1.1",
     "@ionic/angular": "^6.5.6",
