Updated environmental files

--- a/backend/deployment/configuration/server.env.template
+++ b/backend/deployment/configuration/server.env.template
@@ -1,4 +1,4 @@
-# Django
+# Django Environment
 SECRET_KEY=
 DEBUG=1         # 0 - production | 1 - develop
 DOCKER_CONTAINER=1      # 0 - disable | 1 - enable
@@ -13,14 +13,9 @@ SQL_PASSWORD=
 SQL_HOST=
 SQL_PORT=
 
-# MQTT Server
+# MQTT Connection
 MQTT_SERVER=
 MQTT_PORT=
 MQTT_KEEPALIVE=
 MQTT_USER=
 MQTT_PASSWORD=
-
-# PostgreSQL Database
-POSTGRES_DB=
-POSTGRES_USER=
-POSTGRES_PASSWORD=
