--- a/backend/deployment/docker/docker-compose.dev.yml
+++ b/backend/deployment/docker/docker-compose.dev.yml
@@ -1,11 +1,13 @@
 version: "3.8"
 services:
-  django_dev:
+  emotidev:
     build:
       context: https://github.com/kobemaristela/EmotiCoach.git#137-hotfix-permission-and-syntax-fix:/backend/deployment/docker
     command: python manage.py runserver 0.0.0.0:1617
     ports:
       - 1617:1617
+    env_file:
+      - ../configuration/.env.dev
     depends_on:
       - db_dev
 
@@ -13,6 +15,8 @@ services:
     image: postgres:latest
     volumes:
       - postgres_data:/var/lib/postgresql/data/
+    env_file:
+      - ../configuration/.env.dev
 
 volumes:
   postgres_data:
