--- a/backend/deployment/docker/docker-compose.prod.yml
+++ b/backend/deployment/docker/docker-compose.prod.yml
@@ -1,11 +1,13 @@
 version: "3.8"
 services:
-  django_prod:
+  emoticoach:
     build:
       context: https://github.com/kobemaristela/EmotiCoach.git#:/backend/deployment/docker
     command: gunicorn emoticoach.wsgi:application --bind  0.0.0.0:1616
     ports:
       - 1616:1616
+    env_file:
+      - ../configuration/.env.prod
     depends_on:
       - db_prod
 
@@ -13,6 +15,8 @@ services:
     image: postgres:latest
     volumes:
       - postgres_data:/var/lib/postgresql/data/
+    env_file:
+      - ../configuration/.env.prod
 
 volumes:
   postgres_data:
