--- a/Frontend/Emoticoach/package.json
+++ b/Frontend/Emoticoach/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^15.1.4",
     "@angular/platform-browser-dynamic": "^15.1.4",
     "@angular/router": "^15.1.4",
+    "@awesome-cordova-plugins/keychain": "^6.3.0",
     "@capacitor/app": "4.1.1",
     "@capacitor/core": "4.6.1",
     "@capacitor/google-maps": "^4.5.0",
@@ -29,6 +30,7 @@
     "@capacitor/status-bar": "4.1.1",
     "@ionic/angular": "^6.5.6",
     "color-convert": "^2.0.1",
+    "cordova-plugin-ios-keychain": "^3.0.1",
     "echarts": "^5.4.1",
     "ionicons": "^6.0.3",
     "ngx-echarts": "^15.0.1",
