--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,11 +11,13 @@ fonttools==4.38.0
 gunicorn==20.1.0
 icecream==2.1.3
 importlib-resources==5.12.0
+joblib==1.2.0
 kiwisolver==1.4.4
 matplotlib==3.7.0
 numpy==1.24.2
 packaging==23.0
 paho-mqtt==1.6.1
+pandas==2.0.1
 parameterized==0.8.1
 Pillow==9.4.0
 psycopg2-binary==2.9.5
@@ -24,6 +26,10 @@ pyparsing==3.0.9
 python-dateutil==2.8.2
 python-dotenv==0.21.0
 pytz==2022.6
+scikit-learn==1.2.2
+scipy==1.10.1
 six==1.16.0
 sqlparse==0.4.4
+threadpoolctl==3.1.0
+tzdata==2023.3
 zipp==3.15.0
